# QuadraticSurface

./: .gitignore  CMakeLists.txt  QuadraticSurface.cxx  README.md
win/quadratic/: CMakeLists.txt
